3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix speed logic, implementing feature request #1624544: Armour speed limit
 common/living.c
Fix missing call, resulting in corrupted output.
 server/c_object.c
Fix mishandling of weapon/shield/armour restriction. Fix crash with NULL value.
 server/gods.c
Ryo 2007-02-11

Formatting clean-up:
 server/apply.c: fixed indentation, untabified, broke long lines
Aaron Baugher 2007-02-11


Make armour handling coherent between gods, monsters and such.
Cloaks and bracers are not armour.
 common/item.c utils.c: fix tests with macros.
 include/define.h: update macro, new IS_SHIELD.
 server/apply.c monster.c player.c: use macros.
Ryo 2007-02-11

Remove last static buffers, use safe string functions.
 common/readable.c
 include/libproto.h
---
Remove obsolete long_desc(), replaced by ob_describe(), get rid of static buffer.
 include/sproto.h
 server/c_object.c ob_methods.c skills.c spell_effect.c
 types/book/book.c
 types/identify_altar/identify_altar.c
---
Fix compilation warnings.
 include/global.h: remove duplicate DELETE_STRING (FREE_AND_CLEAR_STR), cast to void*.
 plugins/cfpython/include/cfpython.h: Python defines HAVE_GETTIMEOFDAY, but we do too.
 plugins/cfpython/cfpython.c: explicit cast to wanted type.
 plugins/common/hashtable.c: add missing include for malloc().
---
Remove static buffer for strerror_local().
 common/anim.c image.c map.c porting.c
 include/libproto.h
 server/c_misc.c deamon.c hiscore.c init.c login.c resurrection.c
 socket/init.c loop.c lowlevel.c
---
Remove some static variables. Return values from server.
 plugins/cfpython/cfpython_object.c
 plugins/cfanim/include/cfanim_proto.h